# ray-serve-fastapi-pydantic

./: README.md  pyproject.toml
src/bar/: __init__.py  main.py
src/foo/: main.py
src/model_chain/: __init__.py  model_chain.py  run.py
tests/: test_model_chain.py
