[project]
name = "foo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bensooraj", email = "bensooraj@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
foo = "foo:main"
foohello = "foo:say_hello"

bar = "bar:main"
barhello = "bar:say_hello"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
