[project]
name = "foo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bensooraj", email = "bensooraj@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "ray[default,serve]>=2.49.0",
]

[project.scripts]
foo = "foo:main"
foohello = "foo:say_hello"

start_model_chain = "model_chain:run"
stop_model_chain = "model_chain:stop"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
